--- a/app/templates/hydrochemistry.html
+++ b/app/templates/hydrochemistry.html
@@ -67,6 +67,6 @@
         {% endfor %}
     </tbody>
 </table>
-<a href="{{ url_for('new_hydrochemistry') }}" class="btn btn-primary mt-4">Добавить запись для одного бассейна</a> <br>
-<a href="{{ url_for('generate_journal') }}" class="btn btn-primary mt-4">Добавить записи для всех бассейнов</a> <br>
+<a href="{{ url_for('new_hydrochemistry') }}" class="btn btn-primary">Добавить</a>
+<a href="{{ url_for('generate_journal') }}" class="btn btn-primary">Сформировать журнал для всех бассейнов</a>
 {% endblock %}
